--- a/css/style.css
+++ b/css/style.css
@@ -42,6 +42,11 @@ a{
 a:hover, a:focus{
     color: #5fcf80;
 }
+.peq{
+	vertical-align: text-top;
+	margin-top: 100px;
+	font-size: 14px;
+}
 /***********************************
 Navigation bar
 ************************************/
