--- a/css/style.css
+++ b/css/style.css
@@ -47,6 +47,37 @@ a:hover, a:focus{
 	margin-top: 100px;
 	font-size: 14px;
 }
+
+.mais {
+  top: 50%;
+  left: 50%;
+  margin-left: 0px;
+  margin-top: 0px;
+  width: 100%;
+  outline: none;
+  border: none;
+  height: 45px;
+  text-align: center;
+  width: 130px;
+  border-radius: 40px;
+  background: #fff;
+  border: 2px solid #1ECD97;
+  color: #1ECD97;
+  letter-spacing: 1px;
+  text-shadow: 0;
+  font-size: 12px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.25s ease;
+}
+
+.mais:focus {
+    border: none;
+    outline: none;
+}
+
+
+
 /***********************************
 Navigation bar
 ************************************/
@@ -350,7 +381,7 @@ Cta
     font-size: 18px;
     color: #2b5d83;
     font-weight: 100;
-    min-width: 280px;
+    min-width: 320px;
     margin-left: -4px;
     margin-bottom: 2px;
     border: 1px solid #5fcf80;
@@ -362,7 +393,6 @@ Cta
     text-transform: capitalize;
     color: #fff;
     background-color: #5fcf80;
-    border: 2px solid #fff;
     padding: 14px 30px;
     margin-left: -4px;
     transition: all 0.3s;
@@ -803,12 +833,12 @@ a.socialIcon:hover,
 .light-form-button{
     background: #5fcf80;
     border: 1px solid rgba(119, 81, 81, 0.34);
-    width: 24%;
+    width: 34%;
     padding: 10px 10px;
     margin-bottom: 15px;
     color: #fff;: #fafafa;
     border: 1px solid rgba(119, 81, 81, 0.34);
-    width: 24%;
+    width: 34%;
     margin-bottom: 15px;
      -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
@@ -898,7 +928,7 @@ Responsive media queries
         margin-bottom: 30px;
     }
     .contact-form-button{
-        width: 40%;
+        width: 60%;
     }
     .footer .social-links li {
     margin: 0 5px 25px;
