--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,17 @@ a:hover, a:focus{
     z-index:999;
 }
 
+iframe[src*="youtube"] {
+  width:100%;
+  height:100%;
+}
+
+.conteudo{
+  background-color:#f1f1f1;
+  width:700px;
+  height:700px;
+  padding:10px;
+}
 
 
 /***********************************
